made webpage more center (for mobile users) and fixed issue of some images not showing

--- a/files/smash.css
+++ b/files/smash.css
@@ -43,7 +43,7 @@ body{
 	transition: color .45s ease;
 }
 .allPictures{
- margin-left: 150px;
+ margin-left: 130px;
  width: 90%;
 }
 .middle-wrapper{
